form-field fix bug add spacing

--- a/src/assets/examples/form-field-appearance/form-field-appearance.component.css
+++ b/src/assets/examples/form-field-appearance/form-field-appearance.component.css
@@ -1,5 +1,5 @@
 .mat-form-field:not(:last-child) {
-  margin-bottom: 36px;
+  margin-bottom: 56px;
 }
 
 .example-container {
