--- a/src/assets/examples/form-field-hint/form-field-hint.component.css
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.css
@@ -14,5 +14,5 @@
 }
 
 .mat-form-field:not(:last-child) {
-  margin: 0 auto 36px auto;
+  margin: 0 auto 56px auto;
 }
